# cit

./: .clang-format  .clang-tidy  .cmake_format.yml  .codespellrc  .commitlintrc.js  .conform.yaml  .gitconfig  .gitignore  .lgtm.yml  .ls-lint.yml  .mega-linter.yml  .textlintrc.yml  .travis.yml  .yamllint.yml  CMakeLists.txt  LICENSE  README.md  bisect_reuse.md  build.sh  codecov.yml  conanfile.txt  credits.md  index.html  justfile  license.md  rc.yaml  readme.md  run_shell.sh  shell.nix  statistics.html  test_environment.sh
.config/cppcheck/: doctest.cfg
.config/git-cop/: configuration.yml
.config/git-lint/: configuration.yml
.github/workflows/: checks.yml  codeql.yml  mega-linter.yml  pr_comment.yml
.reuse/: dep5
LICENSES/: MIT.txt
bootstrap_nix/bootstrap_seeds/: build_inputs.nix  build_inputs_1.nix  build_inputs_2.nix  config.h  default.nix  generate_env.nix  generate_env_from_json.nix  generate_kaem_scripts.nix  generate_standalone_tree.nix  kaem.c  m2_planet_hashes  sources.nix  test.json
ci/builders/clang/: build.sh
ci/builders/common/: build.sh  cmake_setup.sh
ci/builders/gcc/: build.sh
ci/checks/: all.sh  check_all.sh  cmake_style.sh  code_checker_reports_convert.sh  code_style.sh  conventional_git_style.sh  coverage_report.sh  directories_and_files_naming.sh  docker_style.sh  environment.sh  git_symbols.sh  licenses.sh  lint_all.sh  md_files_style.sh  nix_style.sh  shell_files_style.sh  spelling.sh  yaml_files_style.sh
ci/checks/dictionaries/: conan_dictionary.txt  cspell.json  docker_dictionary.txt  names_dictionary.txt  nix_dictionary.txt  si_dictionary.txt  spelling_corrections.txt  workspace_dictionary.txt
ci/conan_recipes/range-v3/: conandata.yml  conanfile.py
ci/conan_recipes/range-v3/patches/: range.patch
ci/conan_recipes/range_v3/: conandata.yml  conanfile.py
ci/docker/: build.sh  build_docker_files.sh  build_dockerfiles.sh  build_with_nix.sh  build_yamllint.sh  docker_pull.sh  docker_run.sh  docker_run_nix_shell.sh  docker_run_with_network.sh  pull.sh  push.sh  run.sh  run_nix_shell.sh  run_shell.sh
ci/docker/docker_files/: Dockerfile  Dockerfile_old  megalinter.sh
ci/docker/docker_files/linters/bash_exec/: bash-exec.sh  bash_exec.sh
ci/docker/docker_files/linters/git_spell/: git-spell.sh  git_spell.sh
ci/docker/docker_files/linters/ls_spell/: ls-spell.sh  ls_spell.sh
ci/docker/docker_files/megalinter/descriptors/: clang_format.megalinter-descriptor.yml  clang_format_16.megalinter-descriptor.yml  clang_tidy.megalinter-descriptor.yml  (+7 more)
ci/docker/docker_files/yamllint/: Dockerfile
ci/docker/test/: Dockerfile
ci/formatters/: clang_format.sh  cmake_format.sh  format_all.sh  nix_format.sh
ci/nix/: conform.nix  docker_build.nix  docker_build_2.nix  docker_extra_commands.nix  docker_shadow_setup.nix  git_leaks.nix  git_leaks_deps.nix  overlay.nix  pinned_nixpkgs.nix  pinned_nixpkgs_2.nix  pinned_nixpkgs_3.nix  tools.nix
ci/nix/bash_exec/: default.nix
ci/nix/clang_tidy_run/: default.nix
ci/nix/code_checker/: default.nix  python-packages.nix  requirements.txt
ci/nix/commit_lint/: default.nix  node-packages.nix  package-lock.json  package.json  yarn_deps.nix
ci/nix/conform/: default.nix  deps.nix
ci/nix/cspell/: node-env.nix  node-packages.nix  package-lock.json  package.json
ci/nix/docker_file_lint/: docker_file_lint.nix  node-env.nix  node-packages.nix  package-lock.json  package.json
ci/nix/git_leaks/: default.nix
ci/nix/git_lint/: Gemfile  default.nix  gemset.nix
ci/nix/git_lint_py/: default.nix
ci/nix/git_spell/: default.nix
ci/nix/gsl_lite/: default.nix
ci/nix/ls_lint/: default.nix  deps.nix
ci/nix/ls_spell/: default.nix
ci/nix/mdl/: default.nix  gemset.nix
ci/nix/mega_linter/: default.nix  python-packages.nix  requirements.txt
ci/nix/mega_linter/custom_linters/: default.nix
ci/nix/mega_linter/patches/: all_flavors.patch  bin_bash.patch  flavor_factory.patch  icons.patch  json_schema.patch  setup.patch
ci/nix/nixpkgs_fmt_wrapper/: default.nix
ci/nix/outcome/: default.nix
ci/nix/pvs/: how_to_use_pvs_studio_free.nix
ci/nix/remark/: node-packages.nix  package-lock.json  package.json
ci/nix/ruby_2_7/: mkmf_sort_headers.patch
ci/nix/text_lint/: node-packages.nix  package-lock.json  package.json
ci/tests/: git_check.sh
cmake/: ccache.cmake  compiler_flags.cmake  recursive_directories_macro.cmake
dev/bench/: data.js
docs/images/: just.png.license
sources/: CMakeLists.txt
sources/example_glassy/: CMakeLists.txt
sources/example_glassy/application/: CMakeLists.txt
sources/example_glassy/application/sources/: main.cpp
sources/example_glassy/tests/: .clang-tidy  CMakeLists.txt
sources/example_glassy/tests/benchmark_tests/: CMakeLists.txt
sources/example_glassy/tests/benchmark_tests/sources/: fibonacci.cpp  usability_original_test.cpp  usability_smart_pointers_test.cpp  usability_test.cpp
sources/example_glassy/tests/mock_tests/: CMakeLists.txt
sources/example_glassy/tests/mock_tests/sources/: asn_1_int_mock_test.cpp  big_num_mock_test.cpp  bignum_mock_test.cpp  numeric_conversions_mock_test.cpp
sources/example_glassy/tests/sources/: bignum_test.cpp  main.cpp  third_party_libraries_test.cpp
sources/example_glassy/tests/testing_framework/: CMakeLists.txt
sources/example_glassy/tests/testing_framework/sources/: main.cpp  testing_framework.cpp  testing_framework.h
sources/example_glassy/tests/unit_tests/: CMakeLists.txt
sources/example_glassy/tests/unit_tests/sources/: asn_1_int_errc_test.cpp  asn_1_int_multiple_inclusion_test.cpp  asn_1_int_test.cpp  asn_1_integer_errc_test.cpp  asn_1_integer_multiple_inclusion_test.cpp  asn_1_integer_test.cpp  big_num_errc_test.cpp  big_num_multiple_inclusion_test.cpp  big_num_test.cpp  bignum_multiple_inclusion_test.cpp  bignum_test.cpp  memory_helpers_test.cpp  not_null_concepts_test.cpp  number_solver_test.cpp  numeric_conversions_multiple_inclusion_test.cpp  numeric_conversions_test.cpp  third_party_libraries_test.cpp  usability_original_test.cpp  usability_smart_pointers_test.cpp  usability_test.cpp
(+23 files in other folders)
